[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/font/Schr√∂dinger.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/audio/music/gameover/Death Is Just Another Path.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/textures/pictures/engraving-depicting-a-bolide-meteor-falling-to-earth-during-the-day-KJ1M17.jpg" type="Texture" id=3]
[ext_resource path="res://assets/audio/sfx/spells/fireball/fireball_explodes.wav" type="AudioStream" id=4]
[ext_resource path="res://scenes/menu/newPlayer/introduction/Introduction.gd" type="Script" id=5]
[ext_resource path="res://scenes/level/forest/Forest.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/audio/voice/introvoice1.mp3" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="Introduction" type="Node2D"]
script = ExtResource( 5 )
scn_game = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -208.0
margin_top = -64.0
margin_right = 960.0
margin_bottom = 392.0
rect_min_size = Vector2( 640, 360 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -368.0
margin_top = -156.0
margin_right = 256.0
margin_bottom = 116.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="History" type="RichTextLabel" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -368.0
margin_top = -104.0
margin_right = 212.0
margin_bottom = -40.0
custom_fonts/normal_font = SubResource( 1 )
text = "Un meteorito cae sobre el silencioso cielo de Lunaris, produciendo un estruendoso impacto. Te levantas de la cama de manera brusca, y decides salir a indagar."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="ColorRect/History"]

[node name="BeginButton" type="Button" parent="ColorRect"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -416.0
margin_top = -64.0
margin_right = -331.0
margin_bottom = -41.0
custom_fonts/font = SubResource( 2 )
text = "Empezar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="Node" parent="."]

[node name="FX" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 4 )
volume_db = -20.0

[node name="BGM" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 2 )
volume_db = -20.0

[node name="Narrator" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 7 )
volume_db = -10.0
bus = "Voice"

[node name="MeteorSoundTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="NarratorSoundTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="pressed" from="ColorRect/BeginButton" to="." method="_on_BeginButton_pressed"]
[connection signal="timeout" from="MeteorSoundTimer" to="." method="_on_MeteorSoundTimer_timeout"]
[connection signal="timeout" from="NarratorSoundTimer" to="." method="_on_NarratorSoundTimer_timeout"]
